# AI_Stock

./: .dockerignore  .gitignore  Dockerfile  README-en.md  README-zh.md  README.md  docker-compose.yml  pyproject.toml  run.sh
spec/: PROJECT_MAP.md  agent.md  map.md  neural_ukf_momentum_plan.md  next_day_order_planner_spec.md  next_day_strategy_workbench_spec.md  project_herness.md  tutor_guide.md  ui_simplification_training_data_goal.md
tests/: test_analysis_pipeline.py  test_dashboard_action_board_ui_source.py  test_factor_research.py  test_i18n.py  test_i18n_regression.py  test_next_day_order_technical_ui_source.py  test_next_day_order_ui_source.py  test_next_day_strategy_workbench_ui_source.py  test_next_day_swing_ui_source.py  test_order_heatmap_rendering.py  test_order_heatmap_ui_source.py  test_order_plan_strategy_integration.py  test_order_planner.py  test_order_planner_smc.py  test_order_strategy_integration_ui_source.py  test_order_strategy_workbench.py  test_phase2_ui_source.py  test_phase2_visual_workbench.py  test_portfolio.py  test_portfolio_ui_source.py  test_professional_research_center_ui_source.py  test_sidebar_refactor_ui_source.py  test_simplified_navigation_ui_source.py  test_smc_adapter.py  test_strategy_state_machine.py  test_strategy_trade_annotations.py  test_strategy_visualization.py  test_strategy_visualization_ui_source.py  test_strategy_workbench_explanations_ui_source.py  test_swing_order_chart.py  test_trade_vision.py  test_trade_vision_ui_source.py  test_training_data.py  test_training_data_ui_source.py  test_visual_insights.py
(+55 files in other folders)
