[project]
name = "ai-stock"
version = "0.1.0"
description = "Modular stock analysis dashboard and decision report engine."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.18",
  "streamlit>=1.30",
  "yfinance>=0.2.40",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "shap>=0.45",
  "smartmoneyconcepts>=0.0.27",
]

[project.optional-dependencies]
futu = ["futu-api>=8.0"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
